--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,10 @@ flutter:
 
   assets:
     - assets/tiles/
+    - assets/images/Background/
     - assets/images/Terrain/
     - assets/images/HUD/
+    - assets/images/Items/Fruits/
     - assets/images/Main Characters/Mask Dude/
     - assets/images/Main Characters/Ninja Frog/
     - assets/images/Main Characters/Pink Man/
