[fix] deploy workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,4 +38,4 @@ jobs:
         run: npm install -g vercel
 
       - name: Deploy to Vercel
-        run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }} ./build/web
+        run: vercel --prod --token ${{ secrets.VERCEL_TOKEN }}
