--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ flutter:
     - assets/images/Terrain/
     - assets/images/HUD/
     - assets/images/Items/Fruits/
+    - assets/images/Items/Checkpoints/Checkpoint/
+    - assets/images/Main Characters/
     - assets/images/Main Characters/Mask Dude/
     - assets/images/Main Characters/Ninja Frog/
     - assets/images/Main Characters/Pink Man/
