--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flame: ^1.8.2
   flame_tiled: ^1.13.0
+  flame_audio: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -26,6 +27,7 @@ flutter:
 
   assets:
     - assets/tiles/
+    - assets/audio/
     - assets/images/Background/
     - assets/images/Terrain/
     - assets/images/HUD/
