--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ flutter:
     - assets/images/Background/
     - assets/images/Terrain/
     - assets/images/HUD/
-    - assets/images/Enemies/
     - assets/images/Items/Fruits/
     - assets/images/Items/Checkpoints/Checkpoint/
     - assets/images/Main Characters/
@@ -39,3 +38,4 @@ flutter:
     - assets/images/Main Characters/Ninja Frog/
     - assets/images/Main Characters/Pink Man/
     - assets/images/Main Characters/Virtual Guy/
+    - assets/images/Enemies/Chicken/
