--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,3 +39,4 @@ flutter:
     - assets/images/Main Characters/Pink Man/
     - assets/images/Main Characters/Virtual Guy/
     - assets/images/Enemies/Chicken/
+    - assets/images/Traps/Saw/
