--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flame: ^1.8.2
   flame_tiled: ^1.13.0
   flame_audio: ^2.0.5
+  tiled: ^0.10.1
 
 dev_dependencies:
   flutter_test:
